...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map">

    <TextView
        android:id="@+id/upcomingTitle"
        android:layout_height="28dp"
        android:layout_width="145dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:background="@drawable/title_format"
        android:layout_marginTop="20dp"
        android:text="Upcoming Bookings"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textColor="#AF0500"
        android:gravity="top">
    </TextView>
    <ListView
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/star" />

    <ImageButton
        android:id="@+id/uyBtn"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
...
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8E7E7"
            app:menu="@menu/bottom_nav_menu" />
    </RelativeLayout>

...
