<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/studentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/student_name"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/myimage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/studentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="17dp"
        android:text="@string/_12345678"
        android:textColor="#5A5A5A"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/myimage"
        app:layout_constraintTop_toBottomOf="@+id/studentName" />

    <View
        android:id="@+id/divider"
        android:layout_width="413dp"
        android:layout_height="50dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myimage" />

    <TextView
        android:id="@+id/upcomingTitle"
        android:layout_width="372dp"
        android:layout_height="40dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:background="#A12101"
        android:gravity="center"
        android:text="@string/upcoming_bookings"
        android:textColor="#EFC700"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ListView
        android:id="@+id/upcomingList"
        android:layout_width="372dp"
        android:layout_height="155dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/customborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingTitle">
    </ListView>

    <ListView
        android:id="@+id/previousList"
        android:layout_width="372dp"
        android:layout_height="151dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/customborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previousTitle">
    </ListView>

    <TextView
        android:id="@+id/previousTitle"
        android:layout_width="372dp"
        android:layout_height="40dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:background="#A12101"
        android:gravity="center"
        android:text="@string/previous_bookings"
        android:textColor="#EFC700"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="412dp"
        android:layout_height="29dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingList" />

    <ImageView
        android:id="@+id/myimage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

<!--    android:src="@drawable/temp"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8E7E7"
            app:menu="@menu/bottom_nav_menu"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>