...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/lyon_gym" />

    <TextView
        android:id="@+id/gymTitle"
        android:layout_width="413dp"
        android:layout_height="71dp"
        android:background="#513B3F41"
        android:text="Lyon Gym"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
...
